2021-03-21  Morten Welinder  <terra@gnome.org>

	* python-loader.c (gplp_unload_service_function_group): Clear
	python_fn_info_dict after unref so we don't do it again.
	(python_function_get_gnumeric_help): Check for tuple before using.

	* gnm-py-interpreter.c (gnm_py_interpreter_new): Restore state
	after Py_NewInterpreter.

	* gnm-python.c (gnm_python_finalize): Copy list of interpreters as
	it will change underneath us.

2021-03-14  Morten Welinder <terra@gnome.org>

	* Release 1.12.49

2020-08-12  Morten Welinder <terra@gnome.org>

	* Release 1.12.48

2020-06-29  Jean Brefort  <jean.brefort@normalesup.org>

	* all: port to Python3. [#419]

2020-05-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.47

2019-11-06  Morten Welinder <terra@gnome.org>

	* Release 1.12.46

2019-05-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.45

2019-01-15  Morten Welinder  <terra@gnome.org>

	* python-loader.c (gplp_func_file_probe): Ensure return value.

2018-11-24  Morten Welinder <terra@gnome.org>

	* Release 1.12.44

2018-11-20  Jean Brefort  <jean.brefort@normalesup.org>

	* python-loader.c (gplp_func_file_probe), (gplp_func_file_open),
	(gplp_func_file_save), (gplp_func_exec_action),
	(gplp_service_unload): call pygobject_init() if needed. [#368]

2018-08-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.43

2018-08-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.42

2018-05-07  Morten Welinder <terra@gnome.org>

	* Release 1.12.41

2018-04-29  Morten Welinder <terra@gnome.org>

	* Release 1.12.40

2018-03-13  Morten Welinder <terra@gnome.org>

	* Release 1.12.39

2017-12-28  Morten Welinder <terra@gnome.org>

	* Release 1.12.38

2017-12-01  Morten Welinder <terra@gnome.org>

	* Release 1.12.37

2017-11-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.36

2017-07-06  Morten Welinder <terra@gnome.org>

	* Release 1.12.35

2017-03-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.34

2017-01-30  Morten Welinder <terra@gnome.org>
